--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
   --text-color: #ffffff;
   --accent-color: #00bcd4;
   --secondary-color: #ff4081;
+  --h1-color: rgb(138, 138, 138);
+  --theme-color: #00bcd4;
 }
 
 .light-mode {
@@ -12,6 +14,8 @@
   --text-color: #333333;
   --accent-color: #0097a7;
   --secondary-color: #d81b60;
+  --h1-color: rgb(30, 30, 30);
+  --theme-color: rgb(174, 174, 174);
 }
 
 * {
@@ -44,7 +48,12 @@ header {
 h1 {
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--accent-color);
+  color: var(--h1-color);
+  text-shadow: 0.3px 0.3px #fdfdfd;
+}
+
+.search{
+  background-color: var(--theme-color);
 }
 
 .search-container {
